--- a/src/markdown/mas/spatiaal_dens_doelsoorten.Rmd
+++ b/src/markdown/mas/spatiaal_dens_doelsoorten.Rmd
@@ -257,11 +257,50 @@ steekproefkader_buf <- steekproefkader %>%
   st_buffer(300)
 ```
 
-We maken een grid met cellen van 200x200 m en leggen deze over het steekproefkader (met buffer van 300 m).
+We maken een hexagonaal grid met cellen van met gelijkaardige grootte als de telcirkels en leggen deze over het steekproefkader (met buffer van 300 m).
 Voor de centroïde van elke grid cell maken we een predictie o.b.v. het model.
 
+```{r}
+# Function to calculate hexagon vertices
+hexagon_vertices <- function(radius) {
+  angles <- seq(0, 2 * pi, length.out = 7)
+  x <- radius * cos(angles)
+  y <- radius * sin(angles)
+  return(data.frame(x, y))
+}
+
+# Given radius
+radius <- 300
+
+# Calculate hexagon vertices
+hexagon_data <- hexagon_vertices(radius)
+
+# Function to calculate circle points
+circle_points <- function(radius, n_points = 100) {
+  angles <- seq(0, 2 * pi, length.out = n_points)
+  x <- radius * cos(angles)
+  y <- radius * sin(angles)
+  return(data.frame(x, y))
+}
+
+# Calculate circle points
+circle_data <- circle_points(radius)
+
+# Plot hexagon and circumscribed circle
+ggplot() +
+  geom_polygon(data = hexagon_data, aes(x, y), fill = "lightblue", color = "black") +
+  geom_path(data = circle_data, aes(x, y), color = "red", size = 1) +
+  coord_equal() +
+  xlim(-400, 400) +
+  ylim(-400, 400) +
+  ggtitle("Hexagon and Circumscribed Circle")
+```
+
 ```{r, cache=TRUE}
-grid_total <- st_make_grid(steekproefkader_buf, 200) %>%
+# Create grid
+grid_total <- st_make_grid(steekproefkader_buf,
+                           cellsize = radius * sqrt(3),
+                           square = FALSE) %>%
   as_tibble() %>%
   rownames_to_column(var = "id") %>%
   st_as_sf(crs = 31370)
