--- a/src/markdown/mas/spatiaal_dens_doelsoorten.Rmd
+++ b/src/markdown/mas/spatiaal_dens_doelsoorten.Rmd
@@ -257,54 +257,14 @@ steekproefkader_buf <- steekproefkader %>%
   st_buffer(300)
 ```
 
-We maken een hexagonaal grid met cellen van met gelijkaardige grootte als de telcirkels en leggen deze over het steekproefkader (met buffer van 300 m).
+We maken een grid met cellen van met dezelfde oppervlakte als de telcirkels en leggen deze over het steekproefkader (met buffer van 300 m).
 Voor de centroïde van elke grid cell maken we een predictie o.b.v. het model.
-
-```{r}
-radius <- 300
-
-# Calculate side length of hexagon with the same area as the circle
-side_length <- sqrt((2 * pi * radius^2) / (3 * sqrt(3)))
-
-# Function to calculate hexagon vertices with adjusted side length
-hexagon_vertices <- function(side_length) {
-  angles <- seq(0, 2 * pi, length.out = 7)
-  x <- side_length * cos(angles)
-  y <- side_length * sin(angles)
-  return(data.frame(x, y))
-}
-
-# Calculate hexagon vertices with adjusted side length
-hexagon_data <- hexagon_vertices(side_length)
-
-# Function to calculate circle points
-circle_points <- function(radius, n_points = 100) {
-  angles <- seq(0, 2 * pi, length.out = n_points)
-  x <- radius * cos(angles)
-  y <- radius * sin(angles)
-  return(data.frame(x, y))
-}
-
-# Calculate circle points
-circle_data <- circle_points(radius)
-
-# Plot hexagon with adjusted side length and circumscribed circle
-ggplot() +
-  geom_polygon(data = hexagon_data, aes(x, y),
-               fill = "lightblue", color = "black") +
-  geom_path(data = circle_data, aes(x, y),
-            color = "red", size = 1) +
-  coord_equal() +
-  xlim(-400, 400) +
-  ylim(-400, 400) +
-  ggtitle("Hexagon with Adjusted Side Length and Circumscribed Circle")
-```
 
 ```{r, cache=TRUE}
 # Create grid
 grid_total <- st_make_grid(steekproefkader_buf,
                            cellsize = units::set_units(300*300*pi, "m^2"),
-                           square = FALSE) %>%
+                           square = TRUE) %>%
   as_tibble() %>%
   rownames_to_column(var = "id") %>%
   st_as_sf(crs = 31370)
@@ -340,8 +300,7 @@ p_veldleeuwerik1 <- plot_veldleeuwerik %>%
             linewidth = 1) +
     geom_raster(aes(x = x_plot, y = y_plot, fill = Estimate),
                 interpolate = TRUE) +
-    scale_fill_gradientn(colours = c("darkblue", "lightblue", "white",
-                                     "gold", "red"),
+    scale_fill_gradientn(colours = c("darkblue", "lightblue", "gold", "red"),
                          breaks = c(0, 5, 10, 15, 20),
                          limits = c(0, 20)) +
     coord_sf(crs = 31370) +
@@ -361,8 +320,8 @@ p_veldleeuwerik2 <- plot_veldleeuwerik %>%
           linewidth = 1) +
     geom_raster(aes(x = x_plot, y = y_plot, fill = Estimate),
                 interpolate = TRUE) +
-    scale_fill_gradientn(colours = c("darkblue", "lightblue", "white",
-                                     "gold", "red"),
+    scale_fill_gradientn(colours = c("darkblue", "lightblue", "gold", "orange",
+                                     "red"),
                          breaks = c(0, 5, 10, 15, 20),
                          limits = c(0, 20)) +
     coord_sf(crs = 31370) +
