--- a/src/markdown/mas/spatiaal_dens_doelsoorten.Rmd
+++ b/src/markdown/mas/spatiaal_dens_doelsoorten.Rmd
@@ -260,7 +260,7 @@ steekproefkader_buf <- steekproefkader %>%
 We maken een grid met cellen van met dezelfde oppervlakte als de telcirkels en leggen deze over het steekproefkader (= telpunten steekproefkader met buffer van 300 m).
 Voor de centroïde van elke grid cell maken we een predictie o.b.v. het model.
 
-```{r, cache=TRUE}
+```{r}
 # Maak grid over bounding box steekproefkader
 grid_total <- st_make_grid(steekproefkader_buf,
                            cellsize = units::set_units(300*300*pi, "m^2"),
@@ -287,7 +287,7 @@ pred_veldleeuwerik <- fitted(fit_veldleeuwerik, new_df, robust = TRUE,
                              re_formula = NA, offset = FALSE)
 ```
 
-Dit visualiseren we via `geom_tile()`.
+We visualiseren de gemiddelde densiteiten (mediaan) via `geom_tile()`.
 
 ```{r}
 plot_veldleeuwerik <- new_df %>%
@@ -337,10 +337,10 @@ Dit doen we door het 95 % credible interval toe te voegen.
 
 ```{r}
 p_veldleeuwerik2 <- plot_veldleeuwerik %>%
-  rename(gemiddelde = Estimate) %>%
-  pivot_longer(cols = c("gemiddelde",  "Q2.5", "Q97.5"), names_to = "statistiek",
+  rename(mediaan = Estimate) %>%
+  pivot_longer(cols = c("mediaan",  "Q2.5", "Q97.5"), names_to = "statistiek",
                values_to = "waarde") %>%
-  mutate(statistiek = factor(statistiek, levels = c("Q2.5", "gemiddelde", "Q97.5"))) %>%
+  mutate(statistiek = factor(statistiek, levels = c("Q2.5", "mediaan", "Q97.5"))) %>%
   ggplot() +
     geom_sf(data = perimeter_ol, fill = "lightgrey", colour = "darkgrey",
             linewidth = 1) +
@@ -430,12 +430,12 @@ pp_check(fit_gelekwikstaart, type = "bars", ndraws = 100)
 
 Zoals voordien maken we voor de centroïde van elke grid cell een predictie o.b.v. het model.
 
-```{r, cache=TRUE}
-pred_gelekwikstaart <- fitted(fit_gelekwikstaart, new_df,
+```{r}
+pred_gelekwikstaart <- fitted(fit_gelekwikstaart, new_df, robust = TRUE,
                               re_formula = NA, offset = FALSE)
 ```
 
-Dit visualiseren we.
+We visualiseren de gemiddelde densiteiten (mediaan) via `geom_tile()`.
 
 ```{r}
 plot_gelekwikstaart <- new_df %>%
@@ -444,91 +444,72 @@ plot_gelekwikstaart <- new_df %>%
   mutate(across(c(x_plot, y_plot), ~ round(.x, digits = 4)),
          rel_fout = (Q97.5 - Q2.5) / (2 * Estimate))
 
-p_gelekwikstaart1 <- plot_gelekwikstaart %>%
+plot_gelekwikstaart %>%
   ggplot() +
     geom_sf(data = perimeter_ol, fill = "lightgrey", colour = "darkgrey",
             linewidth = 1) +
     geom_tile(aes(x = x_plot, y = y_plot, fill = Estimate)) +
-    scale_fill_gradientn(colours = c("blue", "purple", "gold", "orange",
-                                     "red"),
+    scale_fill_gradientn(colours = rainbow(5),
                          breaks = c(0, 4, 8, 12, 16),
                          limits = c(0, 16)) +
     coord_sf(crs = 31370) +
     labs(x = "", y = "", fill = "Aantal broedparen\nper 100 ha",
          title = "Gele kwikstaart") +
     theme(legend.position = "bottom")
-p_gelekwikstaart1
 ```
 
 We kunnen contourlijnen toevoegen om de figuur begrijpbaarder te maken.
 We voegen contouren toe per broedpaar per 100 ha.
 
 ```{r}
-p_gelekwikstaart2 <- plot_gelekwikstaart %>%
+p_gelekwikstaart1 <- plot_gelekwikstaart %>%
   ggplot() +
   geom_sf(data = perimeter_ol, fill = "lightgrey", colour = "darkgrey",
           linewidth = 1) +
     geom_tile(aes(x = x_plot, y = y_plot, fill = Estimate)) +
-    scale_fill_gradientn(colours = c("blue", "purple", "gold", "orange",
-                                     "red"),
+    scale_fill_gradientn(colours = rainbow(5),
                          breaks = c(0, 4, 8, 12, 16),
                          limits = c(0, 16)) +
     coord_sf(crs = 31370) +
-    labs(x = "", y = "", fill = "Aantal broedparen\nper 100 ha",
-       title = "Gele kwikstaart") +
+    labs(x = "", y = "", fill = "Aantal broedparen\nper 100 ha") +
     theme(legend.position = "bottom") +
     geom_contour2(
       aes(x = x_plot, y = y_plot, z = Estimate, label = after_stat(level)),
       breaks = seq(1, 16, 1), skip = 1,
       label.placer = label_placer_fraction(frac = 0.5, rot_adjuster = 0))
+p_gelekwikstaart1
+```
+
+We visualiseren ook de spatiale verdeling van de onzekerheid. Dit doen we door het 95 % credible interval toe te voegen.
+
+```{r}
+p_gelekwikstaart2 <- plot_gelekwikstaart %>%
+  rename(mediaan = Estimate) %>%
+  pivot_longer(cols = c("mediaan",  "Q2.5", "Q97.5"), names_to = "statistiek",
+               values_to = "waarde") %>%
+  mutate(statistiek = factor(statistiek, levels = c("Q2.5", "mediaan", "Q97.5"))) %>%
+  ggplot() +
+    geom_sf(data = perimeter_ol, fill = "lightgrey", colour = "darkgrey",
+            linewidth = 1) +
+    geom_tile(aes(x = x_plot, y = y_plot, fill = waarde)) +
+    scale_fill_gradientn(colours = rainbow(5),
+                         breaks = c(0, 4, 8, 12, 16, 20, 24),
+                         limits = c(0, 24)) +
+    coord_sf(crs = 31370) +
+    labs(x = "", y = "",
+         fill = "Aantal broedparen\nper 100 ha") +
+    theme(legend.position = "right") +
+    facet_wrap(~statistiek, ncol = 1) +
+    geom_contour2(
+        aes(x = x_plot, y = y_plot, z = waarde, label = after_stat(level)),
+        breaks = seq(1, 24, 2), skip = 1,
+        label.placer = label_placer_fraction(frac = 0.5, rot_adjuster = 0))
 p_gelekwikstaart2
 ```
 
-We visualiseren ook de spatiale verdeling van de onzekerheid.
-Dit doen we aan de hand van de helft van het 95 % credible interval.
-De helft van deze lengte heet de foutmarge.
-De relatieve foutenmarge is dan deze foutmarge gedeeld door de schatting van de densiteit in die grid cell.
-
 ```{r}
-p_gelekwikstaart3 <- plot_gelekwikstaart %>%
-  ggplot() +
-    geom_sf(data = perimeter_ol, fill = "lightgrey", colour = "darkgrey",
-            linewidth = 1) +
-    geom_tile(aes(x = x_plot, y = y_plot, fill = Estimate)) +
-    scale_fill_gradientn(colours = c("blue", "purple", "gold", "orange",
-                                     "red"),
-                         breaks = c(0, 0.4, 0.6, 0.8, 1.2),
-                         limits = c(0, 1.2)) +
-    coord_sf(crs = 31370) +
-    labs(x = "", y = "", fill = "Rel. foutenmarge aantal\nbroedparen per 100 ha",
-         title = "Gele kwikstaart") +
-    theme(legend.position = "bottom")
-p_gelekwikstaart3
-```
-
-```{r}
-p_gelekwikstaart4 <- plot_gelekwikstaart %>%
-  ggplot() +
-    geom_sf(data = perimeter_ol, fill = "lightgrey", colour = "darkgrey",
-            linewidth = 1) +
-    geom_tile(aes(x = x_plot, y = y_plot, fill = Estimate)) +
-    scale_fill_gradientn(colours = c("blue", "purple", "gold", "orange",
-                                     "red"),
-                         breaks = c(0, 0.4, 0.6, 0.8, 1.2),
-                         limits = c(0, 1.2)) +
-    coord_sf(crs = 31370) +
-    labs(x = "", y = "", fill = "Rel. foutenmarge aantal\nbroedparen per 100 ha",
-         title = "Gele kwikstaart") +
-    theme(legend.position = "bottom") +
-    geom_contour2(
-        aes(x = x_plot, y = y_plot, z = rel_fout, label = after_stat(level)),
-        breaks = seq(0, 1.2, 0.1), skip = 1,
-        label.placer = label_placer_fraction(frac = 0.5, rot_adjuster = 0))
-p_gelekwikstaart4
-```
-
-```{r}
-dir.create(here("media", "spatiale_densiteiten"), showWarnings = FALSE)
+dir.create(here("media", "spatiale_densiteiten"), showWarnings = FALSE,
+           recursive = TRUE)
 ggsave(here("media", "spatiale_densiteiten", "gelekwikstaart_dens_ol1.png"),
        p_gelekwikstaart1,
        dpi = 300,
@@ -543,35 +524,13 @@ ggsave(here("media", "spatiale_densiteiten", "gelekwikstaart_dens_ol1.pdf"),
 ggsave(here("media", "spatiale_densiteiten", "gelekwikstaart_dens_ol2.png"),
        p_gelekwikstaart2,
        dpi = 300,
-       width = 8,
-       height = 4)
+       width = 10,
+       height = 8)
 ggsave(here("media", "spatiale_densiteiten", "gelekwikstaart_dens_ol2.pdf"),
        p_gelekwikstaart2,
        dpi = 300,
-       width = 8,
-       height = 4)
-
-ggsave(here("media", "spatiale_densiteiten", "gelekwikstaart_fout_ol1.png"),
-       p_gelekwikstaart3,
-       dpi = 300,
-       width = 8,
-       height = 4)
-ggsave(here("media", "spatiale_densiteiten", "gelekwikstaart_fout_ol1.pdf"),
-       p_gelekwikstaart3,
-       dpi = 300,
-       width = 8,
-       height = 4)
-
-ggsave(here("media", "spatiale_densiteiten", "gelekwikstaart_fout_ol2.png"),
-       p_gelekwikstaart4,
-       dpi = 300,
-       width = 8,
-       height = 4)
-ggsave(here("media", "spatiale_densiteiten", "gelekwikstaart_fout_ol2.pdf"),
-       p_gelekwikstaart4,
-       dpi = 300,
-       width = 8,
-       height = 4)
+       width = 10,
+       height = 8)
 ```
 
 
@@ -617,12 +576,12 @@ pp_check(fit_geelgors, type = "bars", ndraws = 100)
 
 Zoals voordien maken we voor de centroïde van elke grid cell een predictie o.b.v. het model.
 
-```{r, cache=TRUE}
-pred_geelgors <- fitted(fit_geelgors, new_df,
+```{r}
+pred_geelgors <- fitted(fit_geelgors, new_df, robust = TRUE,
                         re_formula = NA, offset = FALSE)
 ```
 
-Dit visualiseren we.
+We visualiseren de gemiddelde densiteiten (mediaan) via `geom_tile()`.
 
 ```{r}
 plot_geelgors <- new_df %>%
@@ -631,33 +590,31 @@ plot_geelgors <- new_df %>%
   mutate(across(c(x_plot, y_plot), ~ round(.x, digits = 4)),
          rel_fout = (Q97.5 - Q2.5) / (2 * Estimate))
 
-p_geelgors1 <- plot_geelgors %>%
+plot_geelgors %>%
   ggplot() +
     geom_sf(data = perimeter_ol, fill = "lightgrey", colour = "darkgrey",
             linewidth = 1) +
     geom_tile(aes(x = x_plot, y = y_plot, fill = Estimate)) +
-    scale_fill_gradientn(colours = c("blue", "purple", "gold", "orange",
-                                     "red"),
+    scale_fill_gradientn(colours = rainbow(5),
                          breaks = c(0, 3, 6, 9, 12),
                          limits = c(0, 12)) +
     coord_sf(crs = 31370) +
     labs(x = "", y = "", fill = "Aantal broedparen\nper 100 ha",
          title = "Geelgors") +
     theme(legend.position = "bottom")
-p_geelgors1
+
 ```
 
 We kunnen contourlijnen toevoegen om de figuur begrijpbaarder te maken.
 We voegen contouren toe per broedpaar per 100 ha.
 
 ```{r}
-p_geelgors2 <- plot_geelgors %>%
+p_geelgors1 <- plot_geelgors %>%
   ggplot() +
   geom_sf(data = perimeter_ol, fill = "lightgrey", colour = "darkgrey",
           linewidth = 1) +
     geom_tile(aes(x = x_plot, y = y_plot, fill = Estimate)) +
-    scale_fill_gradientn(colours = c("blue", "purple", "gold", "orange",
-                                     "red"),
+    scale_fill_gradientn(colours = rainbow(5),
                          breaks = c(0, 3, 6, 9, 12),
                          limits = c(0, 12)) +
     coord_sf(crs = 31370) +
@@ -668,54 +625,39 @@ p_geelgors2 <- plot_geelgors %>%
       aes(x = x_plot, y = y_plot, z = Estimate, label = after_stat(level)),
       breaks = seq(1, 12, 1), skip = 1,
       label.placer = label_placer_fraction(frac = 0.5, rot_adjuster = 0))
+p_geelgors1
+```
+
+We visualiseren ook de spatiale verdeling van de onzekerheid. Dit doen we door het 95 % credible interval toe te voegen.
+
+```{r}
+p_geelgors2 <- plot_geelgors %>%
+  rename(mediaan = Estimate) %>%
+  pivot_longer(cols = c("mediaan",  "Q2.5", "Q97.5"), names_to = "statistiek",
+               values_to = "waarde") %>%
+  mutate(statistiek = factor(statistiek, levels = c("Q2.5", "mediaan", "Q97.5"))) %>%
+  ggplot() +
+    geom_sf(data = perimeter_ol, fill = "lightgrey", colour = "darkgrey",
+            linewidth = 1) +
+    geom_tile(aes(x = x_plot, y = y_plot, fill = waarde)) +
+    scale_fill_gradientn(colours = rainbow(5),
+                         breaks = c(0, 5, 10, 15, 20, 25, 30),
+                         limits = c(0, 30)) +
+    coord_sf(crs = 31370) +
+    labs(x = "", y = "",
+         fill = "Aantal broedparen\nper 100 ha") +
+    theme(legend.position = "right") +
+    facet_wrap(~statistiek, ncol = 1) +
+    geom_contour2(
+        aes(x = x_plot, y = y_plot, z = waarde, label = after_stat(level)),
+        breaks = seq(1, 30, 2), skip = 1,
+        label.placer = label_placer_fraction(frac = 0.5, rot_adjuster = 0))
 p_geelgors2
 ```
 
-We visualiseren ook de spatiale verdeling van de onzekerheid.
-Dit doen we aan de hand van de helft van het 95 % credible interval.
-De helft van deze lengte heet de foutmarge.
-De relatieve foutenmarge is dan deze foutmarge gedeeld door de schatting van de densiteit in die grid cell.
-
 ```{r}
-p_geelgors3 <- plot_geelgors %>%
-  ggplot() +
-    geom_sf(data = perimeter_ol, fill = "lightgrey", colour = "darkgrey",
-            linewidth = 1) +
-    geom_tile(aes(x = x_plot, y = y_plot, fill = Estimate)) +
-    scale_fill_gradientn(colours = c("blue", "purple", "gold", "orange",
-                                     "red"),
-                         breaks = c(0, 0.4, 0.8, 1.2, 1.6),
-                         limits = c(0, 1.6)) +
-    coord_sf(crs = 31370) +
-    labs(x = "", y = "", fill = "Rel. foutenmarge aantal\nbroedparen per 100 ha",
-         title = "Geelgors") +
-    theme(legend.position = "bottom")
-p_geelgors3
-```
-
-```{r}
-p_geelgors4 <- plot_geelgors %>%
-  ggplot() +
-    geom_sf(data = perimeter_ol, fill = "lightgrey", colour = "darkgrey",
-            linewidth = 1) +
-    geom_tile(aes(x = x_plot, y = y_plot, fill = Estimate)) +
-    scale_fill_gradientn(colours = c("blue", "purple", "gold", "orange",
-                                     "red"),
-                         breaks = c(0, 0.4, 0.8, 1.2, 1.6),
-                         limits = c(0, 1.6)) +
-    coord_sf(crs = 31370) +
-    labs(x = "", y = "", fill = "Rel. foutenmarge aantal\nbroedparen per 100 ha",
-         title = "Geelgors") +
-    theme(legend.position = "bottom") +
-    geom_contour2(
-        aes(x = x_plot, y = y_plot, z = rel_fout, label = after_stat(level)),
-        breaks = seq(0, 1.6, 0.2), skip = 1,
-        label.placer = label_placer_fraction(frac = 0.5, rot_adjuster = 0))
-p_geelgors4
-```
-
-```{r}
-dir.create(here("media", "spatiale_densiteiten"), showWarnings = FALSE)
+dir.create(here("media", "spatiale_densiteiten"), showWarnings = FALSE,
+           recursive = TRUE)
 ggsave(here("media", "spatiale_densiteiten", "geelgors_dens_ol1.png"),
        p_geelgors1,
        dpi = 300,
@@ -730,35 +672,13 @@ ggsave(here("media", "spatiale_densiteiten", "geelgors_dens_ol1.pdf"),
 ggsave(here("media", "spatiale_densiteiten", "geelgors_dens_ol2.png"),
        p_geelgors2,
        dpi = 300,
-       width = 8,
-       height = 4)
+       width = 10,
+       height = 8)
 ggsave(here("media", "spatiale_densiteiten", "geelgors_dens_ol2.pdf"),
        p_geelgors2,
        dpi = 300,
-       width = 8,
-       height = 4)
-
-ggsave(here("media", "spatiale_densiteiten", "geelgors_fout_ol1.png"),
-       p_geelgors3,
-       dpi = 300,
-       width = 8,
-       height = 4)
-ggsave(here("media", "spatiale_densiteiten", "geelgors_fout_ol1.pdf"),
-       p_geelgors3,
-       dpi = 300,
-       width = 8,
-       height = 4)
-
-ggsave(here("media", "spatiale_densiteiten", "geelgors_fout_ol2.png"),
-       p_geelgors4,
-       dpi = 300,
-       width = 8,
-       height = 4)
-ggsave(here("media", "spatiale_densiteiten", "geelgors_fout_ol2.pdf"),
-       p_geelgors4,
-       dpi = 300,
-       width = 8,
-       height = 4)
+       width = 10,
+       height = 8)
 ```
 
 
@@ -776,19 +696,39 @@ grid_veldleeuwerik <- grid %>%
 ```
 
 ```{r}
-mapview(grid_veldleeuwerik,
+m1 <- mapview(grid_veldleeuwerik,
         zcol = "Estimate",
         alpha = 0,
-        layer.name = "Aantal broedparen per 100 ha",
+        layer.name = "Mediaan",
         map.types = "OpenStreetMap")
-```
 
-```{r}
-mapview(grid_veldleeuwerik,
-        zcol = "rel_fout",
+m2 <- mapview(grid_veldleeuwerik,
+              zcol = "Q2.5",
         alpha = 0,
-        layer.name = "Rel. foutenmarge aantal broedparen per 100 ha",
+        layer.name = "Q2.5",
         map.types = "OpenStreetMap")
+
+m3 <- mapview(grid_veldleeuwerik,
+        zcol = "Q97.5",
+        alpha = 0,
+        layer.name = "Q97.5",
+        map.types = "OpenStreetMap")
+
+m4 <- mapview(grid_veldleeuwerik,
+        zcol = "Q97.5",
+        alpha = 0,
+        layer.name = "Rel. foutenmarge",
+        map.types = "OpenStreetMap")
+
+leafsync::sync(
+  leaflet::addControl(m1@map, "Aantal broedparen Veldleeuwerik per 100 ha",
+                      position = "bottomleft"),
+  leaflet::addControl(m2@map, "Aantal broedparen Veldleeuwerik per 100 ha",
+                      position = "bottomleft"),
+  leaflet::addControl(m3@map, "Aantal broedparen Veldleeuwerik per 100 ha",
+                      position = "bottomleft"),
+  leaflet::addControl(m4@map, "Aantal broedparen Veldleeuwerik per 100 ha",
+                      position = "bottomleft"))
 ```
 
 We maken een kaart voor Gele kwikstaart.
@@ -803,19 +743,39 @@ grid_gelekwikstaart <- grid %>%
 ```
 
 ```{r}
-mapview(grid_gelekwikstaart,
+m1 <- mapview(grid_gelekwikstaart,
         zcol = "Estimate",
         alpha = 0,
-        layer.name = "Aantal broedparen per 100 ha",
+        layer.name = "Mediaan",
         map.types = "OpenStreetMap")
-```
 
-```{r}
-mapview(grid_gelekwikstaart,
-        zcol = "rel_fout",
+m2 <- mapview(grid_gelekwikstaart,
+              zcol = "Q2.5",
         alpha = 0,
-        layer.name = "Rel. foutenmarge aantal broedparen per 100 ha",
+        layer.name = "Q2.5",
         map.types = "OpenStreetMap")
+
+m3 <- mapview(grid_gelekwikstaart,
+        zcol = "Q97.5",
+        alpha = 0,
+        layer.name = "Q97.5",
+        map.types = "OpenStreetMap")
+
+m4 <- mapview(grid_gelekwikstaart,
+        zcol = "Q97.5",
+        alpha = 0,
+        layer.name = "Rel. foutenmarge",
+        map.types = "OpenStreetMap")
+
+leafsync::sync(
+  leaflet::addControl(m1@map, "Aantal broedparen Gele kwikstaart per 100 ha",
+                      position = "bottomleft"),
+  leaflet::addControl(m2@map, "Aantal broedparen Gele kwikstaart per 100 ha",
+                      position = "bottomleft"),
+  leaflet::addControl(m3@map, "Aantal broedparen Gele kwikstaart per 100 ha",
+                      position = "bottomleft"),
+  leaflet::addControl(m4@map, "Aantal broedparen Gele kwikstaart per 100 ha",
+                      position = "bottomleft"))
 ```
 
 We maken een kaart voor Geelgors.
@@ -830,17 +790,37 @@ grid_geelgors <- grid %>%
 ```
 
 ```{r}
-mapview(grid_geelgors,
+m1 <- mapview(grid_geelgors,
         zcol = "Estimate",
         alpha = 0,
-        layer.name = "Aantal broedparen per 100 ha",
+        layer.name = "Mediaan",
         map.types = "OpenStreetMap")
-```
 
-```{r}
-mapview(grid_geelgors,
-        zcol = "rel_fout",
+m2 <- mapview(grid_geelgors,
+              zcol = "Q2.5",
         alpha = 0,
-        layer.name = "Rel. foutenmarge aantal broedparen per 100 ha",
+        layer.name = "Q2.5",
         map.types = "OpenStreetMap")
+
+m3 <- mapview(grid_geelgors,
+        zcol = "Q97.5",
+        alpha = 0,
+        layer.name = "Q97.5",
+        map.types = "OpenStreetMap")
+
+m4 <- mapview(grid_geelgors,
+        zcol = "Q97.5",
+        alpha = 0,
+        layer.name = "Rel. foutenmarge",
+        map.types = "OpenStreetMap")
+
+leafsync::sync(
+  leaflet::addControl(m1@map, "Aantal broedparen Geelgors per 100 ha",
+                      position = "bottomleft"),
+  leaflet::addControl(m2@map, "Aantal broedparen Geelgors per 100 ha",
+                      position = "bottomleft"),
+  leaflet::addControl(m3@map, "Aantal broedparen Geelgors per 100 ha",
+                      position = "bottomleft"),
+  leaflet::addControl(m4@map, "Aantal broedparen Geelgors per 100 ha",
+                      position = "bottomleft"))
 ```
