--- a/src/markdown/mas/spatiaal_dens_doelsoorten.Rmd
+++ b/src/markdown/mas/spatiaal_dens_doelsoorten.Rmd
@@ -387,6 +387,55 @@ ggsave(here("media", "spatiale_densiteiten", "veldleeuwerik_dens_ol2.pdf"),
        height = 8)
 ```
 
+## Interactieve kaarten
+
+We maken een interactieve kaart kaart voor Veldleeuwerik.
+
+```{r}
+grid_veldleeuwerik <- grid %>%
+  bind_cols(pred_veldleeuwerik) %>%
+  select(id, Estimate, Q2.5, Q97.5, geometry) %>%
+  mutate(Estimate = round(Estimate, 3),
+         rel_fout = (Q97.5 - Q2.5) / (2 * Estimate)) %>%
+  st_as_sf(sf_column_name = "geometry", crs = 31370)
+```
+
+```{r}
+m1 <- mapview(grid_veldleeuwerik,
+        zcol = "Estimate",
+        alpha = 0,
+        layer.name = "Mediaan",
+        map.types = "OpenStreetMap")
+
+m2 <- mapview(grid_veldleeuwerik,
+              zcol = "Q2.5",
+        alpha = 0,
+        layer.name = "Q2.5",
+        map.types = "OpenStreetMap")
+
+m3 <- mapview(grid_veldleeuwerik,
+        zcol = "Q97.5",
+        alpha = 0,
+        layer.name = "Q97.5",
+        map.types = "OpenStreetMap")
+
+m4 <- mapview(grid_veldleeuwerik,
+        zcol = "Q97.5",
+        alpha = 0,
+        layer.name = "Rel. foutenmarge",
+        map.types = "OpenStreetMap")
+
+leafsync::sync(
+  leaflet::addControl(m1@map, "Aantal broedparen Veldleeuwerik per 100 ha",
+                      position = "bottomleft"),
+  leaflet::addControl(m2@map, "Aantal broedparen Veldleeuwerik per 100 ha",
+                      position = "bottomleft"),
+  leaflet::addControl(m3@map, "Aantal broedparen Veldleeuwerik per 100 ha",
+                      position = "bottomleft"),
+  leaflet::addControl(m4@map, "Rel. fout Veldleeuwerik per 100 ha",
+                      position = "bottomleft"))
+```
+
 
 # Gele Kwikstaart
 ## Model fitten
@@ -531,6 +580,55 @@ ggsave(here("media", "spatiale_densiteiten", "gelekwikstaart_dens_ol2.pdf"),
        dpi = 300,
        width = 10,
        height = 8)
+```
+
+## Interactieve kaarten
+
+We maken een interactieve kaart kaart voor Gele kwikstaart.
+
+```{r}
+grid_gelekwikstaart <- grid %>%
+  bind_cols(pred_gelekwikstaart) %>%
+  select(id, Estimate, Q2.5, Q97.5, geometry) %>%
+  mutate(Estimate = round(Estimate, 3),
+         rel_fout = (Q97.5 - Q2.5) / (2 * Estimate)) %>%
+  st_as_sf(sf_column_name = "geometry", crs = 31370)
+```
+
+```{r}
+m1 <- mapview(grid_gelekwikstaart,
+        zcol = "Estimate",
+        alpha = 0,
+        layer.name = "Mediaan",
+        map.types = "OpenStreetMap")
+
+m2 <- mapview(grid_gelekwikstaart,
+              zcol = "Q2.5",
+        alpha = 0,
+        layer.name = "Q2.5",
+        map.types = "OpenStreetMap")
+
+m3 <- mapview(grid_gelekwikstaart,
+        zcol = "Q97.5",
+        alpha = 0,
+        layer.name = "Q97.5",
+        map.types = "OpenStreetMap")
+
+m4 <- mapview(grid_gelekwikstaart,
+        zcol = "Q97.5",
+        alpha = 0,
+        layer.name = "Rel. foutenmarge",
+        map.types = "OpenStreetMap")
+
+leafsync::sync(
+  leaflet::addControl(m1@map, "Aantal broedparen Gele kwikstaart per 100 ha",
+                      position = "bottomleft"),
+  leaflet::addControl(m2@map, "Aantal broedparen Gele kwikstaart per 100 ha",
+                      position = "bottomleft"),
+  leaflet::addControl(m3@map, "Aantal broedparen Gele kwikstaart per 100 ha",
+                      position = "bottomleft"),
+  leaflet::addControl(m4@map, "Rel. fout Gele kwikstaart per 100 ha",
+                      position = "bottomleft"))
 ```
 
 
@@ -681,104 +779,9 @@ ggsave(here("media", "spatiale_densiteiten", "geelgors_dens_ol2.pdf"),
        height = 8)
 ```
 
+## Interactieve kaarten
 
-# OpenStreetMap kaarten
-
-We maken een kaart voor Veldleeuwerik.
-
-```{r}
-grid_veldleeuwerik <- grid %>%
-  bind_cols(pred_veldleeuwerik) %>%
-  select(id, Estimate, Q2.5, Q97.5, geometry) %>%
-  mutate(Estimate = round(Estimate, 3),
-         rel_fout = (Q97.5 - Q2.5) / (2 * Estimate)) %>%
-  st_as_sf(sf_column_name = "geometry", crs = 31370)
-```
-
-```{r}
-m1 <- mapview(grid_veldleeuwerik,
-        zcol = "Estimate",
-        alpha = 0,
-        layer.name = "Mediaan",
-        map.types = "OpenStreetMap")
-
-m2 <- mapview(grid_veldleeuwerik,
-              zcol = "Q2.5",
-        alpha = 0,
-        layer.name = "Q2.5",
-        map.types = "OpenStreetMap")
-
-m3 <- mapview(grid_veldleeuwerik,
-        zcol = "Q97.5",
-        alpha = 0,
-        layer.name = "Q97.5",
-        map.types = "OpenStreetMap")
-
-m4 <- mapview(grid_veldleeuwerik,
-        zcol = "Q97.5",
-        alpha = 0,
-        layer.name = "Rel. foutenmarge",
-        map.types = "OpenStreetMap")
-
-leafsync::sync(
-  leaflet::addControl(m1@map, "Aantal broedparen Veldleeuwerik per 100 ha",
-                      position = "bottomleft"),
-  leaflet::addControl(m2@map, "Aantal broedparen Veldleeuwerik per 100 ha",
-                      position = "bottomleft"),
-  leaflet::addControl(m3@map, "Aantal broedparen Veldleeuwerik per 100 ha",
-                      position = "bottomleft"),
-  leaflet::addControl(m4@map, "Rel. fout Veldleeuwerik per 100 ha",
-                      position = "bottomleft"))
-```
-
-We maken een kaart voor Gele kwikstaart.
-
-```{r}
-grid_gelekwikstaart <- grid %>%
-  bind_cols(pred_gelekwikstaart) %>%
-  select(id, Estimate, Q2.5, Q97.5, geometry) %>%
-  mutate(Estimate = round(Estimate, 3),
-         rel_fout = (Q97.5 - Q2.5) / (2 * Estimate)) %>%
-  st_as_sf(sf_column_name = "geometry", crs = 31370)
-```
-
-```{r}
-m1 <- mapview(grid_gelekwikstaart,
-        zcol = "Estimate",
-        alpha = 0,
-        layer.name = "Mediaan",
-        map.types = "OpenStreetMap")
-
-m2 <- mapview(grid_gelekwikstaart,
-              zcol = "Q2.5",
-        alpha = 0,
-        layer.name = "Q2.5",
-        map.types = "OpenStreetMap")
-
-m3 <- mapview(grid_gelekwikstaart,
-        zcol = "Q97.5",
-        alpha = 0,
-        layer.name = "Q97.5",
-        map.types = "OpenStreetMap")
-
-m4 <- mapview(grid_gelekwikstaart,
-        zcol = "Q97.5",
-        alpha = 0,
-        layer.name = "Rel. foutenmarge",
-        map.types = "OpenStreetMap")
-
-leafsync::sync(
-  leaflet::addControl(m1@map, "Aantal broedparen Gele kwikstaart per 100 ha",
-                      position = "bottomleft"),
-  leaflet::addControl(m2@map, "Aantal broedparen Gele kwikstaart per 100 ha",
-                      position = "bottomleft"),
-  leaflet::addControl(m3@map, "Aantal broedparen Gele kwikstaart per 100 ha",
-                      position = "bottomleft"),
-  leaflet::addControl(m4@map, "Rel. fout Gele kwikstaart per 100 ha",
-                      position = "bottomleft"))
-```
-
-We maken een kaart voor Geelgors.
+We maken een interactieve kaart kaart voor Geelgors.
 
 ```{r}
 grid_geelgors <- grid %>%
